Add endpoint for predicting car price

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -857,16 +857,8 @@
     "* We can create a baseline model with the following features:\n",
     "  * year (numerical) - remove the outlier we found above\n",
     "  * engineSize (numerical)\n",
-    "  * fuelType (categorical)\n",
-    "\n",
-    "After creating a baseline model, we might consider adding the following features:\n",
-    "  * model (categorical)\n"
+    "  * fuelType (categorical)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
