--- a/notebooks/baseline_model.ipynb
+++ b/notebooks/baseline_model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "4   Fiesta  2019  16500    Automatic     1482   Petrol  145  48.7         1.0"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,14 +271,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE:  4626.217865589186\n"
+      "RMSE:  4626.406048484489\n"
      ]
     }
    ],
@@ -295,22 +295,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../model/model.pkl']"
+       "['../model/model_rf.pkl']"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(model, \"../model/model.pkl\")"
+    "joblib.dump(model, \"../model/model_rf.pkl\")"
    ]
   },
   {
