Add feature mileage to model

--- a/notebooks/baseline_model.ipynb
+++ b/notebooks/baseline_model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "4   Fiesta  2019  16500    Automatic     1482   Petrol  145  48.7         1.0"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,12 +205,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select features\n",
-    "num_features = [\"year\", \"engineSize\"]\n",
+    "num_features = [\"year\", \"engineSize\", \"mileage\"]\n",
     "cat_features = [\"fuelType\"]"
    ]
   },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,14 +271,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE:  4626.406048484489\n"
+      "RMSE:  4626.693440874786\n"
      ]
     }
    ],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "['../model/model_rf.pkl']"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
